<resources>
    <string name="app_name">DummyWireframe</string>
    <string name="my_image">my image</string>
    <string name="john_doe">John Doe</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="subheader">Subheader</string>
    <string name="info_1">Info 1</string>
    <string name="info_2">Info 2</string>
    <string name="info_3">Info 3</string>
    <string name="info_4">Info 4</string>
    <string name="info_5">Info 5</string>
    <string name="another_info1_1">Another Info1.1</string>
    <string name="another_info1_2">Another Info1.2</string>
    <string name="another_info1_3">Another Info1.3</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="search_title">search_title</string>
    <string name="events">Events</string>
    <string name="vacancies">Vacancies</string>
    <string name="meetMinderaToolbar">Meet Mindera</string>
    <string name="open_day_18">Open Day\'18</string>
    <string name="days">Day 0%1$d</string>
    <string name="graduate_program">Graduate Program</string>
    <string name="meet_mindera_code_amp_culture"><![CDATA[Meet Mindera Code & Culture]]></string>
    <string name="description_01">Description 01</string>
    <string name="description_02">Description 02</string>
    <string name="description_03">Description 03</string>
    <string name="description_04">Description 04</string>
    <string name="description_05">Description 05</string>
    <string name="description_06">Description 06</string>
    <string name="day_09">Day 09</string>
    <string name="day_08">Day 08</string>
    <string name="day_07">Day 07</string>
    <string name="day_06">Day 06</string>
    <string name="day_05">Day 05</string>
    <string name="day_04">Day 04</string>
    <string name="day_03">Day 03</string>
    <string name="day_02">Day 02</string>
    <string name="day_01">Day 01</string>
    <string name="description_third">Description 0</string>
    <string name="listTextContent">List 0</string>
    <string name="android_developer">Android \ndeveloper \n(m/f)</string>
    <string name="java_engineer">Backend \nsoftware \nengineer-\njava (m/f)</string>
    <string name="front_end">frontend \nsoftware \nengineer (m/f)</string>
    <string name="infrastructure_engineer">Infrastructure \nengineer (m/f)</string>
    <string name="teste_automation">Test \nAutomation \nEngineer (m/f)</string>
    <string name="system_admin">System \nadministrator \n(m/f)</string>
    <string name="ios_developer">Ios developer \n(m/f)</string>
    <string name="graduate_program_job">Graduate \nprogram</string>
</resources>
