<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

    <LinearLayout
        android:id="@+id/eventsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eventsMarginTop"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eventTitle1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activitySecondRow_paddingTopBottom"
            android:text="@string/open_day_18"
            android:textColor="@color/viewTitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_01"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                tools:ignore="ButtonStyle"
                android:contextClickable="true"
                android:clickable="true"
                android:focusable="true"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_02"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_03"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/eventTitle2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activitySecondRow_paddingTopBottom"
            android:text="@string/graduate_program"
            android:textColor="@color/viewTitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_04"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_05"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_06"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/eventTitle3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activitySecondRow_paddingTopBottom"
            android:text="@string/meet_mindera_code_amp_culture"
            android:textColor="@color/viewTitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_07"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_08"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_actionBar"
                android:paddingLeft="@dimen/eventsPaddingLeftRight"
                android:paddingRight="@dimen/eventsPaddingLeftRight"
                android:paddingTop="@dimen/eventsPaddingTop"
                android:text="@string/day_09"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
