<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/eventsPaddingTop"
    android:padding="@dimen/activitySecondRow_paddingLeftRight"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@drawable/wallpaperandroid50">
    <!-- Usually the height for navigation drawers is set between [160,180] dp -->

    <ImageView
        android:layout_width="@dimen/navigationHeaderWidthHeight"
        android:layout_height="@dimen/navigationHeaderWidthHeight"
        android:src="@drawable/defaultuser"
        android:scaleType="centerCrop"
        android:contentDescription="@string/my_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:paddingTop="@dimen/headerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_gmail_com"
        android:paddingTop="@dimen/headerMail"/>

</LinearLayout>